--- a/Administrador.DAL/Administrador.DAL.csproj
+++ b/Administrador.DAL/Administrador.DAL.csproj
@@ -32,19 +32,19 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Common">
-      <HintPath>..\..\..\Paso\ASMAR\bin Alexis  1902\bin\Microsoft.Practices.EnterpriseLibrary.Common.dll</HintPath>
+      <HintPath>..\..\Enterprise Library\Microsoft.Practices.EnterpriseLibrary.Common.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Data">
-      <HintPath>..\..\..\Paso\ASMAR\bin Alexis  1902\bin\Microsoft.Practices.EnterpriseLibrary.Data.dll</HintPath>
+      <HintPath>..\..\Enterprise Library\Microsoft.Practices.EnterpriseLibrary.Data.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation">
-      <HintPath>..\..\..\Paso\ASMAR\bin Alexis  1902\bin\Microsoft.Practices.ServiceLocation.dll</HintPath>
+      <HintPath>..\..\Enterprise Library\Microsoft.Practices.ServiceLocation.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.Unity">
-      <HintPath>..\..\..\Paso\ASMAR\bin Alexis  1902\bin\Microsoft.Practices.Unity.dll</HintPath>
+      <HintPath>..\..\Enterprise Library\Microsoft.Practices.Unity.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.Unity.Interception">
-      <HintPath>..\..\..\Paso\ASMAR\bin Alexis  1902\bin\Microsoft.Practices.Unity.Interception.dll</HintPath>
+      <HintPath>..\..\Enterprise Library\Microsoft.Practices.Unity.Interception.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
