Menu Centrodo y Ordenado

--- a/Administrador/Administrador.csproj
+++ b/Administrador/Administrador.csproj
@@ -163,13 +163,25 @@
     <Content Include="RecursosExternos\semantic.min.css" />
     <Content Include="RecursosExternos\semantic.min.js" />
     <Content Include="Recursos\Imagenes\AdminPersonas.png" />
+    <Content Include="Recursos\Imagenes\btnAlerta.png" />
+    <Content Include="Recursos\Imagenes\BtnDetalle.png" />
+    <Content Include="Recursos\Imagenes\BtnExcel.png" />
+    <Content Include="Recursos\Imagenes\BtnForm.png" />
+    <Content Include="Recursos\Imagenes\btnHistoria.png" />
+    <Content Include="Recursos\Imagenes\BtnLog.png" />
+    <Content Include="Recursos\Imagenes\BtnProducto.png" />
+    <Content Include="Recursos\Imagenes\BtnUser.png" />
+    <Content Include="Recursos\Imagenes\btnYou.png" />
     <Content Include="Recursos\Imagenes\Fondo.jpg" />
+    <Content Include="Recursos\Imagenes\Wall1.jpg" />
+    <Content Include="Recursos\Imagenes\WallMedico.jpg" />
     <Content Include="ScriptsVistas\LogicaAdminPersonas.js" />
     <Content Include="ScriptsVistas\LogicaLogin.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="CSS\slippry.scss" />
     <Content Include="CSS\themes\default\assets\fonts\icons.woff2" />
+    <Content Include="Recursos\Imagenes\U1_ES1_Rub_Pitch_Propuesta_Asesoria %281%29.xlsx" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
