--- a/Administrador.Entity/Administrador.Entity.csproj
+++ b/Administrador.Entity/Administrador.Entity.csproj
@@ -41,13 +41,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Comuna.cs" />
     <Compile Include="ConsultaSi_No.cs" />
     <Compile Include="Filtro.cs" />
     <Compile Include="Persona.cs" />
     <Compile Include="Recinto.cs" />
+    <Compile Include="Region.cs" />
     <Compile Include="TipoInquilino.cs" />
+    <Compile Include="TipoPropiedad.cs" />
+    <Compile Include="TipoVehiculo.cs" />
     <Compile Include="Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vehiculo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
