--- a/Administrador/Administrador.csproj
+++ b/Administrador/Administrador.csproj
@@ -123,11 +123,13 @@
     <Compile Include="Controllers\AdminPersonasController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\MantenedorRecintosController.cs" />
     <Compile Include="Controllers\MantenedorVehiculosController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\HomeModel.cs" />
+    <Compile Include="Models\MantenedorVehiculosModel.cs" />
     <Compile Include="Models\ModelLogin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SessionH.cs" />
@@ -171,15 +173,19 @@
     <Content Include="Recursos\Imagenes\btnHistoria.png" />
     <Content Include="Recursos\Imagenes\BtnLog.png" />
     <Content Include="Recursos\Imagenes\BtnProducto.png" />
+    <Content Include="Recursos\Imagenes\btnRecintos.png" />
     <Content Include="Recursos\Imagenes\BtnUser.png" />
     <Content Include="Recursos\Imagenes\Btnveh.png" />
     <Content Include="Recursos\Imagenes\btnYou.png" />
     <Content Include="Recursos\Imagenes\car.png" />
     <Content Include="Recursos\Imagenes\Fondo.jpg" />
+    <Content Include="Recursos\Imagenes\LogoYouCommunity.png" />
+    <Content Include="Recursos\Imagenes\LogoYouCommunity2.png" />
     <Content Include="Recursos\Imagenes\Wall1.jpg" />
     <Content Include="Recursos\Imagenes\WallMedico.jpg" />
     <Content Include="ScriptsVistas\LogicaAdminPersonas.js" />
     <Content Include="ScriptsVistas\LogicaLogin.js" />
+    <Content Include="ScriptsVistas\LogicaMantenedorRecintos.js" />
     <Content Include="ScriptsVistas\LogicaMantenedorVehiculos.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -218,6 +224,8 @@
     <Content Include="Views\AdminPersonas\AdminPersonas.cshtml" />
     <Content Include="Views\MantenedorVehiculos\Index.cshtml" />
     <Content Include="Views\MantenedorVehiculos\MantenedorVehiculos.cshtml" />
+    <Content Include="Views\MantenedorRecintos\Index.cshtml" />
+    <Content Include="Views\MantenedorRecintos\MantenedorRecintos.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
