--- a/Administrador/Administrador.csproj
+++ b/Administrador/Administrador.csproj
@@ -129,7 +129,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AdminPersonasModel.cs" />
     <Compile Include="Models\HomeModel.cs" />
+    <Compile Include="Models\MantenedorRecintosModel.cs" />
     <Compile Include="Models\MantenedorVehiculosModel.cs" />
     <Compile Include="Models\ModelLogin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
